# task_manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  logger.py  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6173104df980_added_jsob_to_roles_for_user.py  6b4fa79683a3_created_user_and_task_models.py  fc174a6adcdf_refactored_users_roles_and_added_.py
app/api/endpoints/: tasks.py  users.py  websocket.py
app/api/schemas/: common.py  task.py  user.py
app/core/: config.py  dependencies.py  rbac.py  security.py
app/db/: database.py  models.py
app/repositories/: base_repository.py  task_repository.py  user_repository.py
app/services/: task_service.py  user_service.py
app/utils/: rbac.py  unit_of_work.py  websocket.py
tests/: conftest.py  test_auth_and_rbac.py  test_m2m_repo.py  test_task_endpoints_and_schemas.py  test_task_repo.py  test_task_service.py  test_user_endpoints_and_schemas.py  test_user_repo.py  test_user_service.py  test_websocket.py
